force-app/main/default/objects/CB_Onboarding_Application__c/CB_Onboarding_Application__c.object-meta.xml
<CustomObject>
    <description>Master onboarding record for retail, SME, and partner-customer journeys</description>
    <label>CB Onboarding Application</label>
    <nameField>
        <displayFormat>CB-APP-{000000}</displayFormat>
        <label>CB Onboarding Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CB Onboarding Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>