force-app/main/default/objects/CB_Onboarding_Application__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Customer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CB Onboarding Applications</relationshipLabel>
    <relationshipName>CB_Onboarding_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>