force-app/main/default/objects/CB_Onboarding_Application__c/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <label>Application Type</label>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Retail</fullName><default>false</default><label>Retail</label></value><value><fullName>SME</fullName><default>false</default><label>SME</label></value><value><fullName>Partner_Customer</fullName><default>false</default><label>Partner_Customer</label></value></valueSetDefinition></valueSet>
    <type>Picklist</type>
</CustomField>