force-app/main/default/objects/CB_Onboarding_Application__c/fields/CDD_Level__c.field-meta.xml
<CustomField>
    <fullName>CDD_Level__c</fullName>
    <label>CDD Level</label>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Simplified</fullName><default>false</default><label>Simplified</label></value><value><fullName>Standard</fullName><default>false</default><label>Standard</label></value><value><fullName>Enhanced</fullName><default>false</default><label>Enhanced</label></value></valueSetDefinition></valueSet>
    <type>Picklist</type>
</CustomField>