force-app/main/default/objects/CB_Onboarding_Application__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Web</fullName><default>false</default><label>Web</label></value><value><fullName>Mobile</fullName><default>false</default><label>Mobile</label></value><value><fullName>Branch</fullName><default>false</default><label>Branch</label></value><value><fullName>Partner_API</fullName><default>false</default><label>Partner_API</label></value></valueSetDefinition></valueSet>
    <type>Picklist</type>
</CustomField>