force-app/main/default/objects/CB_Onboarding_Application__c/fields/Core_Fin_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Core_Fin_Account_Id__c</fullName>
    <label>Core Fin Account Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>