force-app/main/default/objects/CB_Onboarding_Application__c/fields/Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Id__c</fullName>
    <externalId>true</externalId>
    <label>Correlation Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>