force-app/main/default/objects/CB_Onboarding_Application__c/fields/CRN__c.field-meta.xml
<CustomField>
    <fullName>CRN__c</fullName>
    <label>Companies House CRN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>