force-app/main/default/objects/CB_Onboarding_Application__c/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <label>Entity Type</label>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Individual</fullName><default>false</default><label>Individual</label></value><value><fullName>Limited_Company</fullName><default>false</default><label>Limited_Company</label></value><value><fullName>LLP</fullName><default>false</default><label>LLP</label></value><value><fullName>Sole_Trader</fullName><default>false</default><label>Sole_Trader</label></value><value><fullName>Partnership</fullName><default>false</default><label>Partnership</label></value></valueSetDefinition></valueSet>
    <type>Picklist</type>
</CustomField>