force-app/main/default/objects/CB_Onboarding_Application__c/fields/IDV_Status__c.field-meta.xml
<CustomField>
    <fullName>IDV_Status__c</fullName>
    <label>IDV Status</label>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Pending</fullName><default>false</default><label>Pending</label></value><value><fullName>Pass</fullName><default>false</default><label>Pass</label></value><value><fullName>Refer</fullName><default>false</default><label>Refer</label></value><value><fullName>Fail</fullName><default>false</default><label>Fail</label></value></valueSetDefinition></valueSet>
    <type>Picklist</type>
</CustomField>