force-app/main/default/objects/CB_Onboarding_Application__c/fields/KYC_Decision__c.field-meta.xml
<CustomField>
    <fullName>KYC_Decision__c</fullName>
    <label>KYC Decision</label>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Pending</fullName><default>false</default><label>Pending</label></value><value><fullName>Approve</fullName><default>false</default><label>Approve</label></value><value><fullName>Refer</fullName><default>false</default><label>Refer</label></value><value><fullName>Decline</fullName><default>false</default><label>Decline</label></value></valueSetDefinition></valueSet>
    <type>Picklist</type>
</CustomField>