force-app/main/default/objects/CB_Onboarding_Application__c/fields/Partner_Config__c.field-meta.xml
<CustomField>
    <fullName>Partner_Config__c</fullName>
    <label>Partner Config</label>
    <referenceTo>CB_Partner_Config__c</referenceTo>
    <relationshipLabel>CB Onboarding Applications</relationshipLabel>
    <relationshipName>CB_Onboarding_Applications_Ptr</relationshipName>
    <type>Lookup</type>
</CustomField>