force-app/main/default/objects/CB_Onboarding_Application__c/fields/Partner_Reference__c.field-meta.xml
<CustomField>
    <fullName>Partner_Reference__c</fullName>
    <externalId>true</externalId>
    <label>Partner Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>