force-app/main/default/objects/CB_Onboarding_Application__c/fields/Rejection_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason_Code__c</fullName>
    <label>Rejection Reason Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>