force-app/main/default/objects/CB_Onboarding_Application__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Draft</fullName><default>false</default><label>Draft</label></value><value><fullName>In_Progress</fullName><default>false</default><label>In_Progress</label></value><value><fullName>IDV_Pending</fullName><default>false</default><label>IDV_Pending</label></value><value><fullName>KYC_Pending</fullName><default>false</default><label>KYC_Pending</label></value><value><fullName>Under_Review</fullName><default>false</default><label>Under_Review</label></value><value><fullName>Core_Processing</fullName><default>false</default><label>Core_Processing</label></value><value><fullName>Completed</fullName><default>false</default><label>Completed</label></value><value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value><value><fullName>Expired</fullName><default>false</default><label>Expired</label></value></valueSetDefinition></valueSet>
    <type>Picklist</type>
</CustomField>