force-app/main/default/objects/CB_Onboarding_Application__c/fields/Test_Persona__c.field-meta.xml
<CustomField>
    <fullName>Test_Persona__c</fullName>
    <description>Mock orchestration persona for Wave 1 integration testing</description>
    <label>Test Persona</label>
    <length>50</length>
    <type>Text</type>
</CustomField>