force-app/main/default/objects/CB_Onboarding_Application__c/listViews/All_Applications.listView-meta.xml
<ListView>
    <fullName>All_Applications</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Application_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Channel__c</columns>
    <columns>IDV_Status__c</columns>
    <columns>KYC_Decision__c</columns>
    <columns>Correlation_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Applications</label>
</ListView>