force-app/main/default/objects/CB_Onboarding_Application__c/listViews/CB_Completed.listView-meta.xml
<ListView>
    <fullName>CB_Completed</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Application_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Channel__c</columns>
    <columns>Completed_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>CB Completed</label>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
</ListView>