force-app/main/default/objects/CB_Onboarding_Application__c/listViews/CB_In_Progress.listView-meta.xml
<ListView>
    <fullName>CB_In_Progress</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Application_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Channel__c</columns>
    <columns>Correlation_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>CB In Progress</label>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In_Progress</value>
    </filters>
</ListView>