force-app/main/default/objects/CB_Onboarding_Application__c/listViews/CB_Under_Review.listView-meta.xml
<ListView>
    <fullName>CB_Under_Review</fullName>
    <filterScope>Everything</filterScope>
    <label>CB Under Review</label>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Under_Review</value>
    </filters>
</ListView>